package org.example;

public class Explosion extends Enemigo {

    public Explosion(int fila, int columna) {
        super(fila,columna);
    }

    @Override
    public void mover(int filajugador, int columnajugador) {
        return;
    }
}
